bk_ida/gobmkida/c2/influence_get_moyo_segmentation
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1921:44: error: use of undeclared identifier 'xmmword_495F60'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_495F60); 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1922:42: error: use of undeclared identifier 'xmmword_495F70'
v21 = _mm_load_si128( ( const __m128i *)&xmmword_495F70); 
                                         ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1927:12: error: expected expression
*( _OWORD *)( ( char *)moyos->size + v23) = *( _OWORD *)&v16[v22 - 1084]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1927:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)moyos->size + v23) = *( _OWORD *)&v16[v22 - 1084]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1927:56: error: expected expression
*( _OWORD *)( ( char *)moyos->size + v23) = *( _OWORD *)&v16[v22 - 1084]; 
                                                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1927:48: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)moyos->size + v23) = *( _OWORD *)&v16[v22 - 1084]; 
                                               ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1928:12: error: expected expression
*( _OWORD *)( ( char *)moyos->territorial_value + v23) = *( _OWORD *)&v16[v22]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1928:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)moyos->territorial_value + v23) = *( _OWORD *)&v16[v22]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1928:69: error: expected expression
*( _OWORD *)( ( char *)moyos->territorial_value + v23) = *( _OWORD *)&v16[v22]; 
                                                                    ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1928:61: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)moyos->territorial_value + v23) = *( _OWORD *)&v16[v22]; 
                                                            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/engine/influence.c:1934:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
( __m128i)0LL), 
^~~~~~~~~~~~~
11 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/influence_get_moyo_segmentation/src/obj/1/influence.o] Error 1
